# Education

./: CMakeLists.txt  c_style_func.cpp  main.h
Basic-Web-HTML-CSS-JS/lab1/: about.html  blog.html  contacts.html  cooperation.html  index.html  news.html  styles.css
Basic-Web-HTML-CSS-JS/lab2/: flexbox-based-styles.css  flexbox-based.html  flexbox-styles.css  flexbox.html  grid-based-styles.css  grid-based.html  grid-styles.css  grid.html  home-page-styles.css  (+3 more)
HTML&CSS&JS/: about.html  contacts.html  cooperation.html  news.html  styles.css
Labs-ADS-Python/: ip24_rybak_01.py  ip24_rybak_02.py  ip24_rybak_03.py  ip24_rybak_04.py  ip24_rybak_05.py  ip24_rybak_06.py  ip24_rybak_07.py  ip24_rybak_08.py
Labs-Sem2-Cpp/lab3-inheritance/: CMakeLists.txt  Date.cpp  Date.h  FoodProduct.cpp  FoodProduct.h  IndustrialProduct.cpp  IndustrialProduct.h  Product.cpp  Product.h  ProductList.h  ProductList.tpp  ProductsInput.cpp  ProductsInput.h  ProductsOutput.cpp  ProductsOutput.h  main.cpp
Labs-Sem2-Cpp/lab3-inheritance/trash/: FoodProductsCostCalculator.cpp  FoodProductsCostCalculator.h  FoodProductsInput.cpp  FoodProductsInput.h  FoodProductsOutput.cpp  FoodProductsOutput.h  FoodProductsRange.cpp  FoodProductsRange.h  IndustrialProductsCostCalculator.cpp  IndustrialProductsCostCalculator.h  IndustrialProductsInput.cpp  IndustrialProductsInput.h  IndustrialProductsOutput.cpp  IndustrialProductsOutput.h  IndustrialProductsRange.cpp  IndustrialProductsRange.h
sergiorbk.github.io/: blog.html  cooperation.html  news.html  styles.css
trash/: fileFormating.cpp  fileFormating.h
(+126 files in other folders)
